--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,85 +1,45 @@
-body {
-    margin: 0;
-    background-color: #000;
-    color: #fff;
-    font-family: Monospace;
-    font-size: 13px;
-    line-height: 24px;
-    overscroll-behavior: none;
+html {
+    font-family: Roboto, Arial, sans;
+}
+
+.scrolly textarea {
+    min-height: 300px;
+    white-space: pre;
+    overflow: scroll;
+}
+
+.fab-container {
+    top: 50%;
+    right: -25px;
+}
+
+.video-container {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+.video-container video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loading {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #E0E0E0;
+}
+
+.loading-text {
+    margin-top: 1em;
 }
 
 canvas {
-    display: block;
-}
-
-#overlay {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.7);
-}
-
-#overlay button {
-    background: #ffffff;
-    border: 0;
-    color: #000000;
-    padding: 16px 20px;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-#notSupported {
-    width: 50%;
-    margin: auto;
-    background-color: #f00;
-    margin-top: 20px;
-    padding: 10px;
-}
-
-#control-panel {
-    background: rgba(0, 0, 0, .75);
-    border: 1px solid #333;
-    /*left: 20px;*/
-    padding: 10px 15px;
-    position: absolute;
-    top: 50px;
-    z-index: 2;
-}
-
-p {
-    font-size: 12px;
-    margin: 0 0 5px;
-}
-
-#file-input {
-    cursor: pointer;
-    outline: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-    filter: alpha(opacity=0);
-    /* IE < 9 */
-    opacity: 0;
-}
-
-.input-label {
-    cursor: pointer;
-    position: relative;
-    display: inline-block;
-
-    padding: 5px 15px;
-    background: #ccc;
-    color: #333;
-    border: 0 none;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
+    background: black;
 }
