--- a/web_viewer/css/style.css
+++ b/web_viewer/css/style.css
@@ -2,12 +2,37 @@ body {
     margin: 0;
     background-color: #000;
     color: #fff;
-    font-family: Monospace;
+
     font-size: 13px;
     line-height: 24px;
     overscroll-behavior: none;
+
+    font-family: Roboto, Arial, sans;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
-canvas {
-    display: block;
+#scene-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+
+.menu {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.v-navigation-drawer {
+    will-change: initial;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
